# slidy

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  rustfmt.toml
.github/workflows/: nix.yml  rust.yml
examples/slidy_no_file/: main.rs  slides.rs
examples/slidy_serde/: main.rs
examples/slidy_serde/resources/: input_file.json
resources/: simple_slide.txt  to_import.txt
src/: lib.rs  main.rs  parser.rs  slideshow.rs
src/backend_sdl/: mod.rs  slideshow.rs  timer.rs  utils.rs
src/backends/: mod.rs
src/backends/crossterm/: mod.rs
src/backends/sdl/: mod.rs  slideshow.rs  timer.rs  utils.rs
src/parser/: lexer.rs  mod.rs  tokenizer.rs  utils.rs
src/windows/: mod.rs  slideshow.rs  timer.rs  utils.rs
