[package]
name = "slidy"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "slidy"
path = "src/main.rs"

[dependencies]
crossterm = { version = "0.23", optional = true }
notify = "4.0"
sdl2 = { version = "0.35", features = ["ttf", "image", "unsafe_textures"], optional = true }
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3.14"

[[example]]
name = "slidy_serde"

[[example]]
name = "slidy_no_file"

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["sdl", "cterm"]
cterm = ["crossterm"]
sdl = ["sdl2"]
